add ablated scene graph experiment

--- a/TF-IDF.ipynb
+++ b/TF-IDF.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,18 +34,51 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test: 5000\n",
+      "restval: 30504\n",
+      "val: 5000\n",
+      "train: 82783\n",
+      "loading annotations into memory...\n",
+      "Done (t=0.81s)\n",
+      "creating index...\n",
+      "index created!\n",
+      "loading annotations into memory...\n",
+      "Done (t=0.41s)\n",
+      "creating index...\n",
+      "index created!\n"
+     ]
+    }
+   ],
    "source": [
-    "ds = VGDataset(sg_path=None)"
+    "# ds = VGDataset(sg_path=None)\n",
+    "# ds = FlickrDataset(sg_path=None)\n",
+    "ds = CocoDataset(sg_path=None)\n",
+    "# ds = VGDataset(sg_path='/data/project/rw/CBIR/data/vg_coco/vg_coco_gt_sg.pkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['node_labels', 'adj', 'cocoid', 'imgid', 'bboxes'])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "l_test = ds.d_split['test']"
+    "ds.sg[0].keys()"
    ]
   },
   {
@@ -54,15 +87,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''visual genome'''\n",
+    "# l_train_terms = []\n",
+    "# for img_id in ds.d_split['train']:\n",
+    "#     sg = ds.imgid2sg(img_id)\n",
+    "#     l_train_terms.append(sg['obj_labels'])\n",
+    "    \n",
+    "# l_test_terms = []\n",
+    "# for img_id in ds.d_split['test']:\n",
+    "#     sg = ds.imgid2sg(img_id)\n",
+    "#     l_test_terms.append(sg['obj_labels'])    \n",
+    "\n",
+    "'''f30k and coco'''\n",
     "l_train_terms = []\n",
     "for img_id in ds.d_split['train']:\n",
     "    sg = ds.imgid2sg(img_id)\n",
-    "    l_train_terms.append(sg['obj_labels'])\n",
+    "    l_row = []\n",
+    "    for i, word in enumerate(sg['node_labels']):\n",
+    "        if i < len(sg['bboxes']):\n",
+    "            l_row.append(word)\n",
+    "    l_train_terms.append(l_row)\n",
     "    \n",
     "l_test_terms = []\n",
     "for img_id in ds.d_split['test']:\n",
     "    sg = ds.imgid2sg(img_id)\n",
-    "    l_test_terms.append(sg['obj_labels'])    "
+    "    l_row = []\n",
+    "    for i, word in enumerate(sg['node_labels']):\n",
+    "        if i < len(sg['bboxes']):\n",
+    "            l_row.append(word)\n",
+    "    l_test_terms.append(l_row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l_test = ds.d_split['test']"
    ]
   },
   {
@@ -107,6 +169,46 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "150"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(train_vocab)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "149"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(test_vocab)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "for i_d, d in enumerate(l_train_terms):\n",
@@ -122,16 +224,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tfidf = TfidfTransformer()"
+    "tfidf = TfidfTransformer(use_idf=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +242,7 @@
        "TfidfTransformer(norm='l2', smooth_idf=True, sublinear_tf=False, use_idf=True)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,19 +271,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# os.mkdir('/data/project/rw/viewer_CBIR/viewer/vg_coco_results/boo_tf')\n",
+    "# os.mkdir('/data/project/rw/viewer_CBIR/viewer/f30k_results/boo_tfidf')\n",
+    "os.mkdir('/data/project/rw/viewer_CBIR/viewer/coco_results/boo_tfidf')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 13203/13203 [16:10<00:00, 13.60it/s]\n"
+      "100%|██████████| 5000/5000 [02:28<00:00, 33.68it/s]\n"
      ]
     }
    ],
    "source": [
-    "result_dir = '/data/project/rw/viewer_CBIR/viewer/vg_coco_results/boo_tfidf'\n",
+    "result_dir = '/data/project/rw/viewer_CBIR/viewer/coco_results/boo_tfidf'\n",
     "for i_query, test_id in enumerate(tqdm(l_test)):  # query id\n",
     "    l_sim = []\n",
     "    for j_target, target_id in enumerate(l_test):\n",
