--- a/humanlabel/compute_human_correlation.ipynb
+++ b/humanlabel/compute_human_correlation.ipynb
@@ -437,19 +437,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3/3 [00:24<00:00,  8.05s/it]\n"
+      "100%|██████████| 1/1 [00:06<00:00,  6.52s/it]\n"
      ]
     }
    ],
    "source": [
-    "l_algorithms = ['resnet', 'sbert_rerank100', 'vg_han_tmb_epoch_19']\n",
+    "l_algorithms = ['vg_han_tmb_bin_epoch_19']\n",
     "# l_algorithms = ['v1_resnetweight05_epoch_10_rerank', 'gen_v1_resnet07_epoch_99_rerank', 'gen_v1_resnet07_epoch_99']\n",
     "algo_scores = {'triplet_id': list(answer_cnt.index)}\n",
     "d_resnet_sim = read_similarity_data('resnet', df_triplet)\n",
@@ -490,18 +490,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "triplet_id    4995.389622\n",
-       "sbert            0.607103\n",
+       "triplet_id                 4995.389622\n",
+       "vg_han_tmb_bin_epoch_19       0.581261\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,20 +512,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "triplet_id             4995.389622\n",
-       "resnet                    0.572403\n",
-       "sbert_rerank100           0.612177\n",
-       "vg_han_tmb_epoch_19       0.584435\n",
+       "triplet_id    4995.389622\n",
+       "boo_tfidf        0.593685\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
