Update at the end of ECCV

--- a/TF-IDF.ipynb
+++ b/TF-IDF.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,6 +21,7 @@
     "import pandas as pd\n",
     "from tqdm import tqdm\n",
     "import os\n",
+    "import json\n",
     "\n",
     "from dataloader import he_sampling\n",
     "from data import FlickrDataset, CocoDataset, VGDataset\n",
@@ -32,32 +33,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "test: 5000\n",
-      "restval: 30504\n",
-      "val: 5000\n",
-      "train: 82783\n",
-      "loading annotations into memory...\n",
-      "Done (t=0.81s)\n",
-      "creating index...\n",
-      "index created!\n",
-      "loading annotations into memory...\n",
-      "Done (t=0.41s)\n",
-      "creating index...\n",
-      "index created!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ds = VGDataset(sg_path=None)\n",
+    "ds = VGDataset(sg_path='/data/project/rw/CBIR/data/vg_coco/sgg_grcnn/vgcoco_sgg_grcnn_with_adj.pkl')\n",
     "# ds = FlickrDataset(sg_path=None)\n",
-    "ds = CocoDataset(sg_path=None)\n",
+    "# ds = CocoDataset(sg_path=None)\n",
     "# ds = VGDataset(sg_path='/data/project/rw/CBIR/data/vg_coco/vg_coco_gt_sg.pkl')"
    ]
   },
@@ -65,14 +48,27 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "emb_file = '/data/project/rw/CBIR/data/f30k/butd_freq_prior_LR/glove_embs_f30k_sgg_butd_freq_prior_LR.pkl'\n",
+    "vocab2idx_file = '/data/project/rw/CBIR/data/f30k/butd_freq_prior_LR/vocab2idx_f30k_sgg_butd_freq_prior_LR.pkl'\n",
+    "idx2vocab_file = '/data/project/rw/CBIR/data/f30k/butd_freq_prior_LR/idx2vocab_f30k_sgg_butd_freq_prior_LR.pkl'\n",
+    "scene_graph_path = '/data/project/rw/CBIR/data/f30k/butd_freq_prior_LR/f30k_sgg_butd_freq_prior_LR_with_adj.pkl'\n",
+    "ds = FlickrDataset(vocab_emb=emb_file, vocab2idx=vocab2idx_file, idx2vocab=idx2vocab_file, sg_path=scene_graph_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['node_labels', 'adj', 'cocoid', 'imgid', 'bboxes'])"
+       "dict_keys(['node_labels', 'adj', 'filename', 'imgid', 'bboxes', 'width', 'height'])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +116,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''GT scene graph'''    \n",
+    "gen_scene_graph = '/data/project/rw/CBIR/vg_generated_sg_adj_full_butd_freq_train.pkl'   \n",
+    "gen_sg = pickle.load(open(gen_scene_graph, 'rb'))\n",
+    "# full scene graph\n",
+    "sg = json.load(open('/data/public/rw/datasets/visual_genome/filtered_scene_graphs_coco.json', 'r'))\n",
+    "id2sg = {int(sg_['image_id']): sg_  for sg_ in sg}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''GT Scene Graph VG-COCO'''\n",
+    "  \n",
+    "'''load scene graph and add triplet features'''\n",
+    "\n",
+    "\n",
+    "l_train_terms = []\n",
+    "for img_id in ds.d_split['train']:\n",
+    "    sg_ = id2sg[img_id]\n",
+    "    l_row = []\n",
+    "    l_obj = [obj['names'][0] for obj in sg_['objects']]\n",
+    "    for i, word in enumerate(l_obj):\n",
+    "        l_row.append(word)\n",
+    "    l_train_terms.append(l_row)\n",
+    "    \n",
+    "l_test_terms = []\n",
+    "for img_id in ds.d_split['test']:\n",
+    "    sg_ = id2sg[img_id]\n",
+    "    l_row = []\n",
+    "    l_obj = [obj['names'][0] for obj in sg_['objects']]\n",
+    "    for i, word in enumerate(l_obj):\n",
+    "        l_row.append(word)\n",
+    "    l_test_terms.append(l_row)    \n",
+    "    \n",
+    "# l_test_terms = []\n",
+    "# for img_id in ds.d_split['test']:\n",
+    "#     sg = ds.imgid2sg(img_id)\n",
+    "#     l_row = []\n",
+    "#     for i, word in enumerate(sg['node_labels']):\n",
+    "#         if i < len(sg['bboxes']):\n",
+    "#             l_row.append(word)\n",
+    "#     l_test_terms.append(l_row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,16 +216,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "150"
+       "48387"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,16 +236,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "149"
+       "24484"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,25 +273,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tfidf = TfidfTransformer(use_idf=True)"
+    "tfidf = TfidfTransformer(use_idf=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "TfidfTransformer(norm='l2', smooth_idf=True, sublinear_tf=False, use_idf=True)"
+       "TfidfTransformer(norm='l2', smooth_idf=True, sublinear_tf=False, use_idf=False)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,30 +320,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "# os.mkdir('/data/project/rw/viewer_CBIR/viewer/vg_coco_results/boo_tf')\n",
-    "# os.mkdir('/data/project/rw/viewer_CBIR/viewer/f30k_results/boo_tfidf')\n",
-    "os.mkdir('/data/project/rw/viewer_CBIR/viewer/coco_results/boo_tfidf')"
+    "# os.mkdir('/data/project/rw/viewer_CBIR/viewer/vg_coco_results/grcnn_boo_tfidf')\n",
+    "# os.mkdir('/data/project/rw/viewer_CBIR/viewer/vg_coco_results/grcnn_boo_tfidf')\n",
+    "# os.mkdir('/data/project/rw/viewer_CBIR/viewer/f30k_results/butd_boo_tfidf')\n",
+    "# os.mkdir('/data/project/rw/viewer_CBIR/viewer/f30k_results/butd_boo_tf')\n",
+    "os.mkdir('/data/project/rw/viewer_CBIR/viewer/vg_coco_results/gt_boo_tf')\n",
+    "# os.mkdir('/data/project/rw/viewer_CBIR/viewer/coco_results/boo_tfidf')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5000/5000 [02:28<00:00, 33.68it/s]\n"
+      "100%|██████████| 13203/13203 [14:21<00:00, 15.32it/s]\n"
      ]
     }
    ],
    "source": [
-    "result_dir = '/data/project/rw/viewer_CBIR/viewer/coco_results/boo_tfidf'\n",
+    "result_dir = '/data/project/rw/viewer_CBIR/viewer/vg_coco_results/gt_boo_tf'\n",
     "for i_query, test_id in enumerate(tqdm(l_test)):  # query id\n",
     "    l_sim = []\n",
     "    for j_target, target_id in enumerate(l_test):\n",
