--- a/humanlabel/compute_human_correlation.ipynb
+++ b/humanlabel/compute_human_correlation.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,12 +25,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_result = pd.read_csv('results_v1_201911141704_final.csv')\n",
-    "df_triplet = pd.read_csv('triplets_v1_201911102026.csv')\n",
+    "# df_result = pd.read_csv('results_v1_201911141704_final.csv')\n",
+    "# df_triplet = pd.read_csv('triplets_v1_201911102026.csv')\n",
+    "df_result = pd.read_csv('results_v2_202003050303.csv')\n",
+    "df_triplet = pd.read_csv('triplets_v2.csv')\n",
     "df_triplet = df_triplet.set_index('triplet_id')"
    ]
   },
@@ -43,54 +45,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "user_id\n",
-       "cjhan                    9017\n",
-       "erin122                  4908\n",
-       "epsilon.kim              3002\n",
-       "wookee3                  2422\n",
-       "woong.ssang              2263\n",
-       "edwin.kang               1283\n",
-       "yoomin618                1075\n",
-       "hexa.ai                  1039\n",
-       "JRW                      1013\n",
-       "chico2121                 519\n",
-       "jinhyun.b                 474\n",
-       "eunjin                    392\n",
-       "IceAmericano              345\n",
-       "LSW                       298\n",
-       "Julyeon Seo               274\n",
-       "Dray.Choe                 255\n",
-       "Jinyeong                  251\n",
-       "hyunji                    250\n",
-       "cnuh                      211\n",
-       "jihoon.lee                205\n",
-       "yejun                     200\n",
-       "robert.p                  136\n",
-       "hihello2                  102\n",
-       "Jonggwon                   87\n",
-       "motherfathergentleman      76\n",
-       "eos73                      73\n",
-       "jay.mini                   50\n",
-       "junojuno                   45\n",
-       "sungbin.lim                31\n",
-       "ian.theman                 31\n",
-       "hans                       28\n",
-       "kwon.g                     25\n",
-       "scarlett.heo               21\n",
-       "dhkwak                     16\n",
-       "hihello                    15\n",
-       "june.one                    4\n",
-       "john.dublin                 3\n",
+       "cjhan                    1753\n",
+       "epsilon.kim              1618\n",
+       "erin122                  1518\n",
+       "wookee3                  1239\n",
+       "edwin.kang               1029\n",
+       ".                        1007\n",
+       "woong.ssang               604\n",
+       "kloud.on                  407\n",
+       "JRW                       190\n",
+       "yoomin618                 188\n",
+       "hexa.ai                   170\n",
+       "yang.kim                  109\n",
+       "jason.mun                 100\n",
+       "jinhyun.b                  88\n",
+       "chico2121                  86\n",
+       "IceAmericano               72\n",
+       "LSW                        68\n",
+       "eunjin                     67\n",
+       "hyunji                     46\n",
+       "Julyeon Seo                45\n",
+       "cnuh                       40\n",
+       "yejun                      37\n",
+       "Dray.Choe                  35\n",
+       "Jinyeong                   35\n",
+       "jihoon.lee                 34\n",
+       "hihello2                   21\n",
+       "robert.p                   20\n",
+       "Jonggwon                   14\n",
+       "jay.mini                   11\n",
+       "eos73                       9\n",
+       "sungbin.lim                 8\n",
+       "testa                       8\n",
+       "motherfathergentleman       7\n",
+       "hihello                     6\n",
+       "ian.theman                  5\n",
+       "junojuno                    5\n",
+       "scarlett.heo                3\n",
+       "hans                        3\n",
+       "dhkwak                      2\n",
+       "june.one                    2\n",
+       "kwon.g                      2\n",
+       "john.dublin                 1\n",
        "Name: id, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,15 +109,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Dray.Choe', 'IceAmericano', 'JRW', 'Jinyeong', 'Jonggwon', 'Julyeon Seo', 'LSW', 'chico2121', 'cjhan', 'cnuh', 'dhkwak', 'edwin.kang', 'eos73', 'epsilon.kim', 'erin122', 'eunjin', 'hans', 'hexa.ai', 'hihello', 'hihello2', 'hyunji', 'ian.theman', 'jay.mini', 'jihoon.lee', 'jinhyun.b', 'junojuno', 'kwon.g', 'motherfathergentleman', 'robert.p', 'scarlett.heo', 'sungbin.lim', 'wookee3', 'woong.ssang', 'yejun', 'yoomin618']\n",
-      "35\n"
+      "['.', 'Dray.Choe', 'IceAmericano', 'JRW', 'Jinyeong', 'Jonggwon', 'Julyeon Seo', 'LSW', 'chico2121', 'cjhan', 'cnuh', 'edwin.kang', 'epsilon.kim', 'erin122', 'eunjin', 'hexa.ai', 'hihello2', 'hyunji', 'jason.mun', 'jay.mini', 'jihoon.lee', 'jinhyun.b', 'kloud.on', 'robert.p', 'wookee3', 'woong.ssang', 'yang.kim', 'yejun', 'yoomin618']\n",
+      "29\n"
      ]
     }
    ],
@@ -121,6 +128,26 @@
     "l_filtered_users = (user_count[user_count > filter_count]).index.to_list()\n",
     "print(l_filtered_users)\n",
     "print(len(l_filtered_users))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1752"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df_triplet)"
    ]
   },
   {
@@ -176,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -217,24 +244,8 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
@@ -243,18 +254,34 @@
        "    <tr>\n",
        "      <td>4</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>5</td>\n",
+       "      <td>9</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14</td>\n",
        "      <td>5.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>15</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -263,14 +290,14 @@
       "text/plain": [
        "answer       o1   o2  both  neither   o3\n",
        "triplet_id                              \n",
-       "1           1.0  2.0   0.0      0.0  0.0\n",
-       "2           0.0  2.0   2.0      0.0  2.0\n",
-       "3           4.0  0.0   1.0      0.0  1.0\n",
-       "4           0.0  3.0   0.0      0.0  0.0\n",
-       "5           5.0  0.0   0.0      0.0  0.0"
+       "3           5.0  0.0   1.0      0.0  1.0\n",
+       "4           0.0  5.0   0.0      0.0  0.0\n",
+       "9           7.0  0.0   0.0      0.0  0.0\n",
+       "14          5.0  0.0   0.0      0.0  0.0\n",
+       "15          4.0  1.0   1.0      0.0  1.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,13 +313,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      ".\n",
       "Dray.Choe\n",
       "IceAmericano\n",
       "JRW\n",
@@ -303,33 +331,26 @@
       "chico2121\n",
       "cjhan\n",
       "cnuh\n",
-      "dhkwak\n",
       "edwin.kang\n",
-      "eos73\n",
       "epsilon.kim\n",
       "erin122\n",
       "eunjin\n",
-      "hans\n",
       "hexa.ai\n",
-      "hihello\n",
       "hihello2\n",
       "hyunji\n",
-      "ian.theman\n",
+      "jason.mun\n",
       "jay.mini\n",
       "jihoon.lee\n",
       "jinhyun.b\n",
-      "junojuno\n",
-      "kwon.g\n",
-      "motherfathergentleman\n",
+      "kloud.on\n",
       "robert.p\n",
-      "scarlett.heo\n",
-      "sungbin.lim\n",
       "wookee3\n",
       "woong.ssang\n",
+      "yang.kim\n",
       "yejun\n",
       "yoomin618\n",
-      "score    0.690198\n",
-      "dtype: float64 score    0.040811\n",
+      "score    0.726913\n",
+      "dtype: float64 score    0.050892\n",
       "dtype: float64\n"
      ]
     }
@@ -403,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,20 +458,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:06<00:00,  6.52s/it]\n"
+      "\n",
+      "  0%|          | 0/2 [00:00<?, ?it/s]\u001b[A\n",
+      " 50%|█████     | 1/2 [00:03<00:03,  3.67s/it]\u001b[A\n",
+      "100%|██████████| 2/2 [00:07<00:00,  3.67s/it]\u001b[A\n"
      ]
     }
    ],
    "source": [
-    "l_algorithms = ['vg_han_tmb_bin_epoch_19']\n",
-    "# l_algorithms = ['v1_resnetweight05_epoch_10_rerank', 'gen_v1_resnet07_epoch_99_rerank', 'gen_v1_resnet07_epoch_99']\n",
+    "# l_algorithms = ['sbert_rerank100', 'vg_gin_big_epoch_24', 'boo_tf', 'vg_gcn_epoch_24', 'resnet', 'gwl_gen_wordonly_rerank', 'gencap_sbert', 'vg_resnet_reg_epoch_257']\n",
+    "l_algorithms = ['vg_gcn_noatt_epoch_24', 'vg_gcn_randrel_epoch_24']\n",
+    "# l_algorithms = ['gwl_gen_wordonly_rerank']\n",
     "algo_scores = {'triplet_id': list(answer_cnt.index)}\n",
     "d_resnet_sim = read_similarity_data('resnet', df_triplet)\n",
     "for algo in tqdm(l_algorithms):\n",
@@ -490,18 +515,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "triplet_id                 4995.389622\n",
-       "vg_han_tmb_bin_epoch_19       0.581261\n",
+       "triplet_id                 4957.963470\n",
+       "vg_gcn_noatt_epoch_24         0.605820\n",
+       "vg_gcn_randrel_epoch_24       0.603854\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,6 +579,117 @@
    ],
    "source": [
     "algo_scores.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "  0%|          | 0/10 [00:00<?, ?it/s]\u001b[A\n",
+      " 10%|█         | 1/10 [00:00<00:04,  2.05it/s]\u001b[A\n",
+      " 20%|██        | 2/10 [00:00<00:03,  2.05it/s]\u001b[A\n",
+      " 30%|███       | 3/10 [00:01<00:03,  2.04it/s]\u001b[A\n",
+      " 40%|████      | 4/10 [00:01<00:02,  2.04it/s]\u001b[A\n",
+      " 50%|█████     | 5/10 [00:02<00:02,  2.04it/s]\u001b[A\n",
+      " 60%|██████    | 6/10 [00:02<00:01,  2.04it/s]\u001b[A\n",
+      " 70%|███████   | 7/10 [00:03<00:01,  2.04it/s]\u001b[A\n",
+      " 80%|████████  | 8/10 [00:03<00:00,  2.05it/s]\u001b[A\n",
+      " 90%|█████████ | 9/10 [00:04<00:00,  2.05it/s]\u001b[A\n",
+      "100%|██████████| 10/10 [00:04<00:00,  2.04it/s]\u001b[A\n"
+     ]
+    }
+   ],
+   "source": [
+    "# l_algorithms = ['sbert_rerank100', 'vg_gin_big_epoch_24', 'boo_tf', 'vg_gcn_epoch_24', 'resnet', 'gwl_gen_wordonly_rerank', 'gencap_sbert', 'vg_resnet_reg_epoch_257']\n",
+    "# l_algorithms = ['matching_regression_attnode_tail_4_rerank']\n",
+    "l_algorithms = [f'random_{i}' for i in range(10)]\n",
+    "algo_scores = {'triplet_id': list(answer_cnt.index)}\n",
+    "# d_resnet_sim = read_similarity_data('resnet', df_triplet)\n",
+    "for algo in tqdm(l_algorithms):\n",
+    "#     d_sim_result = read_similarity_data(algo, df_triplet)\n",
+    "    l_score = []\n",
+    "    for triplet_id, row in answer_cnt.iterrows():\n",
+    "        o1, o2, o3, p, q = row['o1'], row['o2'], row['o3'], row['both'], row['neither']\n",
+    "\n",
+    "        if o1 + o2  < 2:\n",
+    "            l_score.append(np.nan)\n",
+    "            continue\n",
+    "            \n",
+    "        # get algorithm's prediction\n",
+    "         \n",
+    "        # get algorithm's prediction\n",
+    "        triplet = df_triplet.loc[triplet_id]\n",
+    "        sim1 = np.random.rand()\n",
+    "        sim2 = np.random.rand()\n",
+    "#         sim1 = d_sim_result[triplet['query_id']][triplet['target_id1']]\n",
+    "#         sim2 = d_sim_result[triplet['query_id']][triplet['target_id2']]\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        if sim1 > sim2:\n",
+    "            oi = o1\n",
+    "        else:\n",
+    "            oi = o2\n",
+    "        \n",
+    "        s = (oi + 0.5 * p ) / (o1 + o2 + p + q )\n",
+    "        l_score.append(s)\n",
+    "    algo_scores[algo] = l_score\n",
+    "algo_scores = pd.DataFrame(algo_scores)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = algo_scores.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.47186033624495216"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.drop('triplet_id').mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.011238115494062404"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.drop('triplet_id').std()"
    ]
   }
  ],
